# lcr-rag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PREREQUISITES.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-dev.txt  requirements-exact.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
annotation/: annotation_guidelines.md  calibration_examples.jsonl  inter_annotator_agreement.json  sample_annotations.jsonl
checkpoints/: README.md  TENSOR_MANIFEST.md
checkpoints/classifier/: config.json  training_metadata_deberta.json  training_metadata_distilbert.json  training_metadata_tinybert.json
checkpoints/detector/: README.md  REFERENCE_VALUES.md  config.json  demo_detector.pt  final_v2.1_a100_fp16_metadata.json
checkpoints/refinement/: README.md  REFERENCE_VALUES.md  config.json  final_v1.3_a100_fp16_metadata.json
configs/: GHOST_PARAMETERS.md  README.md  classifier_config.yaml  detector_config.yaml  refinement_config.yaml  training_hyperparameters.yaml
configs/base/: detector_base.yaml  refinement_base.yaml
configs/deprecated/: detector_v0_3layer.yaml  refinement_v0_nonrecurrent.yaml
configs/environments/: cloud_4xa100.yaml  cpu_debug.yaml  local_rtx3090.yaml
configs/experiments/ablations/: classifier_architectures.yaml  detector_hidden_dim_sweep.yaml  refinement_iterations.yaml
configs/experiments/sweeps/: alpha_sweep.yaml  bottleneck_sweep.yaml  iteration_sweep.yaml
data/: README.md
data/analysis/: dataset_statistics.json  l2_numerical_stratification.json
data/cache/: embedding_cache_info.json
data/dev/: l1_temporal.jsonl  l2_numerical.jsonl  l3_entity.jsonl  l4_semantic.jsonl
data/natural/: natural_test_set_v1.jsonl  natural_test_set_v2.jsonl
data/test/: l1_temporal.jsonl  l2_numerical.jsonl  l3_entity.jsonl  l4_semantic.jsonl
docs/: API_REFERENCE.md  ARCHITECTURE.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
examples/: README.md  batch_inference.py  quick_start.py
experiments/: README.md
notebooks/: README.md
scripts/: README.md  download_datasets.py  download_models.py
scripts/analysis/: compute_significance.py  error_analysis.py
scripts/analysis/exploratory/: eda_conflict_patterns.py
scripts/analysis/legacy/: initial_baseline_comparison_v1.py
scripts/baselines/: chain_of_thought.py  self_consistency.py
scripts/baselines/unused/: README.md  contrastive_decoding.py  retrieval_reranking.py
scripts/calibration/: calibrate_detector.py
scripts/profiling/: memory_profiler.py
scripts/training/: resume_training.sh  run_hyperparameter_sweep.py
scripts/utils/: check_environment.py  convert_checkpoint_precision.py  data_format_converter.py  verify_environment.py
src/: README.md  __init__.py
src/data/: __init__.py  dataset_loader.py
src/models/: __init__.py  conflict_detector.py  lcr_system.py  model_loader.py  refinement_module.py  taxonomy_classifier.py
src/models/experimental/: README.md  __init__.py  adaptive_refinement.py  gated_refinement.py  transformer_refinement.py
src/models/legacy/: README.md  detector_v0.py  refinement_v0.py
src/training/: __init__.py  losses.py  train_classifier.py  train_detector.py  train_refinement.py
src/utils/: __init__.py  calibration_validator.py  hardware_compatibility.py
tests/: __init__.py  conftest.py
tests/unit/: test_detector.py  test_refinement.py
