# ==============================================================================
# LCR (Learned Conflict Resolution) - Project Configuration
# ==============================================================================
#
# Modern Python packaging using PEP 621 standards.
# Supports: pip install -e . / pip install -e .[dev] / pip install -e .[full]
#
# ==============================================================================

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------------------------------------
# Project Metadata (PEP 621)
# -----------------------------------------------------------------------------
[project]
name = "lcr-research"
version = "1.0.0"
description = "Learned Conflict Resolution for RAG Systems - ACL 2026"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "natural-language-processing",
    "machine-learning",
    "conflict-resolution",
    "retrieval-augmented-generation",
    "transformers",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Core dependencies (minimal set for basic functionality)
dependencies = [
    # PyTorch ecosystem
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # Hugging Face
    "transformers>=4.35.0,<4.40.0",
    "tokenizers>=0.15.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "huggingface-hub>=0.19.0",
    "safetensors>=0.4.0",

    # Core ML
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # Data handling
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",

    # Configuration
    "pyyaml>=6.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "python-dotenv>=1.0.0",

    # Retrieval
    "rank-bm25>=0.2.2",

    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.6.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.4.0",
    "hypothesis>=6.91.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

# Testing only
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.4.0",
    "hypothesis>=6.91.0",
]

# GPU acceleration
gpu = [
    "bitsandbytes>=0.41.0",
    "peft>=0.6.0",
    "optimum>=1.14.0",
    "flash-attn>=2.0.0",
]

# Experiment tracking
tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.9.0",
    "tensorboard>=2.14.0",
]

# Visualization
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

# Jupyter notebooks
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
]

# External API clients (for baselines)
api = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "cohere>=4.37.0",
]

# Fast inference
inference = [
    "vllm>=0.2.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

# Distributed training
distributed = [
    "deepspeed>=0.12.0",
    "ray[default]>=2.8.0",
]

# Documentation
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

# Full installation (everything except inference-specific)
full = [
    "lcr-research[dev,gpu,tracking,viz,notebook,api,distributed,docs]",
]

# Paper reproduction (exact versions)
paper = [
    "torch==2.1.0",
    "transformers==4.35.0",
    "tokenizers==0.15.0",
    "datasets==2.14.6",
    "accelerate==0.24.1",
    "numpy==1.24.3",
    "scipy==1.11.3",
    "scikit-learn==1.3.1",
    "pandas==2.0.3",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/lcr-research"
Documentation = "https://lcr-research.readthedocs.io"
Repository = "https://github.com/YOUR_USERNAME/lcr-research"
Issues = "https://github.com/YOUR_USERNAME/lcr-research/issues"

[project.scripts]
lcr = "src.models.lcr_system:main"
lcr-train = "src.training.train_detector:main"
lcr-eval = "scripts.evaluation.eval_main_results:main"

# -----------------------------------------------------------------------------
# Tool Configuration: Ruff (Linting & Formatting)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "_backup",
    "sample",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "I",      # isort
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B007",   # loop control variable not used
    "UP032",  # f-string format
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# -----------------------------------------------------------------------------
# Tool Configuration: Black (Formatting)
# -----------------------------------------------------------------------------
[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | _backup
  | sample
)/
'''

# -----------------------------------------------------------------------------
# Tool Configuration: isort
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
skip = [".git", ".venv", "__pycache__", "build", "dist", "_backup", "sample"]

# -----------------------------------------------------------------------------
# Tool Configuration: MyPy (Type Checking)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "_backup",
    "sample",
    "notebooks",
    "tests",
]

[[tool.mypy.overrides]]
module = "src.models.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.training.*"
disallow_untyped_defs = true

# -----------------------------------------------------------------------------
# Tool Configuration: Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Tool Configuration: Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/experimental/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

# -----------------------------------------------------------------------------
# Setuptools Configuration
# -----------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]
exclude = ["tests*", "_backup*", "sample*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
